commit after class

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,12 @@
 
 {% block content %}
 <div class="container">
-  <p>Content goes here</p>
+  <div class="row">
+    <div class="col">
+      <h1>Queen: Reigning Supreme in Rock Music</h1>
+      <p>Hold place hold place hold place hold place hold place hold place hold place hold place hold place hold place hold place. </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
 
