added grid cards but they aren't showing up

--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col">
       <h1>Queen: Reigning Supreme in Rock Music</h1>
-      <p>Hold place hold place hold place hold place hold place hold place hold place hold place hold place hold place hold place. </p>
+      <p>Formed in London in 1970, Queen celebrates the enduring legacy of one of the most influential bands in music history. With their groundbreaking sound, theatrical performances, and anthemic hits, Queen transcended boundaries and captivated audiences worldwide. Their innovative approach to rock music continues to inspire generations, solidifying their place as true pioneers of the genre. </p>
     </div>
   </div>
 </div>
