--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -6,17 +6,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item ">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Library books
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% for book in library.books %}
-            <li><a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-      </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ relative_path }}band-members.html">Discography</a>
+              </li>
+        </ul>
     </div>
   </div>
 </nav>
