--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -7,7 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{{ relative_path }}band-members.html">Discography</a>
+                <a class="nav-link" href="{{ relative_path }}discography.html">Discography</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ relative_path }}members.html">Band Members</a>
               </li>
         </ul>
     </div>
