--- a/src/discography.njk
+++ b/src/discography.njk
@@ -7,17 +7,20 @@
 {% block content %}
 <article class="container">
   <h1>Reigning Rock 'n' Roll Royalty</h1>
-  <p>Intro text here.</p>
+  <p>Text here</p>
   <div class="row row-cols-1 row-cols-md-2 g-4">
+    {% for album in discography.discography %}
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src={{ album.image }} class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">{{ album.title }}</h5>
+        <p class="card-text">{{ album.year }}</p>
       </div>
     </div>
-
-
+  </div>
+</div>
+  {% endfor %}
+</div>
 </article>
 {% endblock %}
