--- a/src/_includes/jumbotron.njk
+++ b/src/_includes/jumbotron.njk
@@ -1,5 +1,5 @@
 <div id="jumbo" class="p-5 mb-4 bg-light">
   <div class="container-fluid py-5 text-center">
-    <img src="img/queen-logo-white.png" alt="White Queen Logo" class="img-fluid">
+    <img src="{{relative_path}}img/queen-logo-white.png" alt="White Queen Logo" class="img-fluid">
   </div>
 </div>
