--- a/src/members.njk
+++ b/src/members.njk
@@ -7,19 +7,20 @@
 {% block content %}
 <article class="container">
   <h1>Behind Queen's Crown</h1>
-  <p>Subtitle</p>
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    {% for members in members.discography %}
+  <p>Meet the dudes that make up this rock band called Queen.</p>
+   <div class="row row-cols-4 row-cols-md-4 row-cols-lg-4 row-sm-4 g-4">
+    {% for members in members.members %}
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="img/members/{{ members.image }}" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">{{ members.name }}</h5>
+        <p class="card-text">{{ members.instruments }}</p>
+        <p><a href="queen/{{ members.slug }}.html">More information</p>
       </div>
     </div>
   </div>
-</div>
+
   {% endfor %}
 </div>
 </article>
