everything looks good right now so I have to save it

--- a/src/_templates/bake-member.njk
+++ b/src/_templates/bake-member.njk
@@ -1,6 +1,7 @@
 {% extends '_templates/base.njk' %}
 
 {% set relative_path = "../" %}
+{% from '_macros/prose.njk' import prose %}
 
 {% block page_title %}{{ title }}{% endblock %}
 
@@ -10,10 +11,11 @@
   <article class="container">
     <div class="row">
       <div class="col-sm-4">
-          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
+          <img src="../img/members/{{ imagebw }}" alt="" class="img-fluid mb-4">
       </div>
       <div class="col-sm-8">
           <h1>{{ name }}</h1>
+          {{ prose(post) }}
       </div>
     </div>
   </article>
