--- a/src/members.njk
+++ b/src/members.njk
@@ -16,7 +16,7 @@
       <div class="card-body">
         <h5 class="card-title">{{ members.name }}</h5>
         <p class="card-text">{{ members.instruments }}</p>
-        <p><a href="queen/{{ members.slug }}.html">More information</p>
+        <a href="queen/{{ members.slug }}.html" class="card-link">More Information</a>
       </div>
     </div>
   </div>
