--- a/src/discography.njk
+++ b/src/discography.njk
@@ -7,8 +7,8 @@
 {% block content %}
 <article class="container">
   <h1>Reigning Rock 'n' Roll Royalty</h1>
-  <p>Text here</p>
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <p>Fifteen albums that show the evolution of rock in its golden age.</p>
+  <div class="row row-cols-3 row-cols-md-3 row-cols-lg-3 g-4">
     {% for album in discography.discography %}
   <div class="col">
     <div class="card">
