--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,19 @@
 @import 'nav';
 @import 'jumbotron';
 
+.almendra-sc-regular {
+  font-family: "Almendra SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1 {
+  font-family: "Almendra SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h3 {
   font-size: 1.5rem;
 }
+
