--- a/src/_templates/bake-member.njk
+++ b/src/_templates/bake-member.njk
@@ -8,7 +8,7 @@
 {% block page_description %}{{ title }} by {{ author }}{% endblock %}
 
 {% block content %}
-  <article class="container">
+  <article class="container page-content">
     <div class="row">
       <div class="col-sm-4">
           <img src="../img/members/{{ imagebw }}" alt="" class="img-fluid mb-4">
