--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,5 +1,13 @@
 /* nav */
 
-.navbar {
-  margin-bottom: 20px;
+ul, li {
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+nav {
+  font-family: "Gloock", serif;
+  font-weight: 400;
+  font-style: normal;
 }
