--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,9 @@
 // Import partials
 @import 'nav';
 @import 'jumbotron';
+@import 'members';
+@import 'discography';
+@import 'footer';
 
 .almendra-sc-regular {
   font-family: "Almendra SC", serif;
@@ -28,13 +31,62 @@
   font-style: normal;
 }
 
-h1 {
-  font-family: "Almendra SC", serif;
+.gloock-regular {
+  font-family: "Gloock", serif;
   font-weight: 400;
   font-style: normal;
 }
 
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 400 to 700
+
+.kameron-body {
+  font-family: "Kameron", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.cutive-regular {
+  font-family: "Cutive", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.courier-prime-regular {
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.courier-prime-bold {
+  font-family: "Courier Prime", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.courier-prime-regular-italic {
+  font-family: "Courier Prime", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.courier-prime-bold-italic {
+  font-family: "Courier Prime", monospace;
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+h1 {
+  font-family: "Gloock", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 h3 {
   font-size: 1.5rem;
 }
+
 
