--- a/src/discography.njk
+++ b/src/discography.njk
@@ -7,7 +7,7 @@
 {% block content %}
 <article class="container">
   <h1>Reigning Rock 'n' Roll Royalty</h1>
-  <p>Fifteen albums that show the evolution of rock in its golden age.</p>
+  <p class="body-text">Fifteen albums that show the evolution of rock in its golden age.</p>
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-sm-1 g-4">
     {% for album in discography.discography %}
   <div class="col">
