--- a/src/scss/_discography.scss
+++ b/src/scss/_discography.scss
@@ -4,8 +4,9 @@
   font-style: normal;
 }
 
-.card-body {
+.card-text {
   font-family: "Courier Prime", monospace;
-  font-weight: 400;
-  font-style: normal;
+  font-weight: 600;
+  font-style: italic;
+  color:#636363;
 }
